--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net35\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,6 +60,13 @@
       <Project>{777b39ff-9ac7-4c70-be7d-b5d502651891}</Project>
       <Name>cco.devops.extension.transversal.logger</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Actions\ApplicationPool\" />
+    <Folder Include="Actions\EventLog\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
