--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net35\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -89,6 +93,9 @@
       <Project>{777b39ff-9ac7-4c70-be7d-b5d502651891}</Project>
       <Name>cco.devops.extension.transversal.logger</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
