--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/packages.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Ninject" version="3.2.2.0" targetFramework="net35" />
+  <package id="NLog" version="4.2.3" targetFramework="net35" />
 </packages>
