--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core/cco.devops.extension.framework.core.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core/cco.devops.extension.framework.core.csproj
@@ -34,6 +34,10 @@
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net35\Ninject.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.2.3\lib\net35\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
