Implement setting reader and configuration functionality

--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/App.config
@@ -1,3 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  
+  <appSettings>
+    <!--ATR: Actions configured in this extension-->
+    <add key="[AC]_IISPoolRestar" value="true"/>
+    <add key="[AC]_EventLogGetter" value="true"/>
+    <add key="[AC]_IISLogGetter" value="false"/>
+    
+    <!--ATR: Communication functions currently configured-->
+    <add key="[COM]_ftp" value="false"/>
+    <add key="[COM]_email" value="true"/>
+    <add key="[COM]_sms" value="false"/>
+    <add key="[COM]_whatsapp" value="false"/>
+    
+    <!--ATR: Emails configured-->
+    <add key="[EM]_email@email.com" value="false"/>
+    <add key="[EM]_email2@email.com" value="false"/>
+    <add key="[EM]_email3@email.com" value="false"/>
+    <add key="[EM]_email3@email.com" value="false"/>
+    <add key="[EM]_cco@cencosud.cl" value="true"/>
+    <add key="[EM]_alex.torresruiz@cencosud.cl" value="true"/>
+    
+    
+  
+
+  </appSettings>
 </configuration>
