--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/cco.devops.extension.framework.core.windows.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/cco.devops.extension.framework.core.windows.csproj
@@ -46,11 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConfigurationSetting\ConfigurationSettingFormatter.cs" />
+    <Compile Include="Contracts\AppSettingKeyValueVo.cs" />
+    <Compile Include="Contracts\IAppSettingReadable.cs" />
+    <Compile Include="Contracts\ISettingFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
