--- a/CCO.DotNet.Extensions/cco.devops.extension.transversal.dto/cco.devops.extension.transversal.dto.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.transversal.dto/cco.devops.extension.transversal.dto.csproj
@@ -46,11 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigurationDto.cs" />
     <Compile Include="Entities\Emails\EmailConfigurationDto.cs" />
     <Compile Include="Entities\Emails\EmailInfoDto.cs" />
     <Compile Include="Enums\Nlog\EnumNLogStruct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueObject\LogVo.cs" />
+    <Compile Include="ValueObject\Configuration\ActionEnableVo.cs" />
+    <Compile Include="ValueObject\Configuration\CommunicationFunctionsVo.cs" />
+    <Compile Include="ValueObject\Configuration\EmailsSender.cs" />
+    <Compile Include="ValueObject\Log\LogVo.cs" />
+    <Compile Include="ValueObject\Settings\AppSettingKeyValueVo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
