--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/App.config
@@ -1,5 +1,32 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+
+  <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
+    <configSections>
+      <sectionGroup name="ScriptRunner">
+        <section name="functionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerVo"/>
+        <section name="scriptPaths" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathVo"/>
+      </sectionGroup> 
+    </configSections>
+
+  <ScriptRunner>
+    <functionality>
+      <add key="EnableBathExecution" value="false"/>
+      <add key="EnablePowerShellExecution" value="false"/>
+      <add key="EnableJarExecution" value="false"/>
+    </functionality>
+
+    <scriptPaths>
+      <add key="AppPoolRestarter" value="c:/path/path.ps"/>
+      <add key="AppPoolRecycler" value="c:/path/path.ps"/>
+      <add key="EventLogGetter" value="c:/path/path.ps"/>
+      <add key="Other" value="c:/path/path.ps"/>
+    </scriptPaths>
+  </ScriptRunner>
+  <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
+    
+    
+    
   
   <appSettings>
     <!--ATR: Actions configured in this extension-->
