--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/App.config
@@ -1,24 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
-   <!--<runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath=".;.\cco.devops.extension.framework.core.windows\bin"/>
-    </assemblyBinding>
-  </runtime>-->
-  
   <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
-    <configSections>
-      <sectionGroup name="ScriptRunner">
-
-        <section name="ScriptRunnerFuncionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerFuncionalityVo, cco.devops.extension.transversal.dto" allowLocation="true" allowDefinition="Everywhere"/>
-        <section name="ScriptRunnerPathOrFiles" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathOrFilesVo, cco.devops.extension.transversal.dto" allowLocation="true" allowDefinition="Everywhere"/>
-
-
-
-
-      </sectionGroup> 
-    </configSections>
+  <configSections>
+    <sectionGroup name="ScriptRunner">
+      <section name="functionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerVo, cco.devops.extension.transversal.dto"/>
+      <section name="scriptPaths" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathVo, cco.devops.extension.transversal.dto"/>
+    </sectionGroup>
+  </configSections>
 
   <ScriptRunner>
     <functionality>
@@ -35,22 +24,22 @@
     </scriptPaths>
   </ScriptRunner>
   <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
-    
-    
-    
-  
+
+
+
+
   <appSettings>
     <!--ATR: Actions configured in this extension-->
     <add key="[AC]_IISPoolRestar" value="true"/>
     <add key="[AC]_EventLogGetter" value="true"/>
     <add key="[AC]_IISLogGetter" value="false"/>
-    
+
     <!--ATR: Communication functions currently configured-->
     <add key="[COM]_ftp" value="false"/>
     <add key="[COM]_email" value="true"/>
     <add key="[COM]_sms" value="false"/>
     <add key="[COM]_whatsapp" value="false"/>
-    
+
     <!--ATR: Emails configured-->
     <add key="[EM]_email@email.com" value="false"/>
     <add key="[EM]_email2@email.com" value="false"/>
@@ -58,9 +47,9 @@
     <add key="[EM]_email3@email.com" value="false"/>
     <add key="[EM]_cco@cencosud.cl" value="true"/>
     <add key="[EM]_alex.torresruiz@cencosud.cl" value="true"/>
-    
-    
-  
+
+
+
 
   </appSettings>
 </configuration>
