--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/App.config
@@ -1,55 +1,42 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
-  <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
+
+  <!--Configuration Groups-->
   <configSections>
     <sectionGroup name="ScriptRunner">
-      <section name="functionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerVo, cco.devops.extension.transversal.dto"/>
-      <section name="scriptPaths" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathVo, cco.devops.extension.transversal.dto"/>
+      <section name="ScriptRunnerFunctionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerVo, 
+               System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+               allowLocation="true" allowDefinition="Everywhere"/>
+      <section name="ScriptRunnerValuesParameters" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathVo, 
+               cco.devops.extension.transversal.dto
+               System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" 
+    allowLocation="true" allowDefinition="Everywhere"/> 
     </sectionGroup>
+
+
+    
+
+
   </configSections>
 
-  <ScriptRunner>
-    <functionality>
-      <add key="EnableBathExecution" value="false"/>
-      <add key="EnablePowerShellExecution" value="false"/>
-      <add key="EnableJarExecution" value="false"/>
-    </functionality>
-
-    <scriptPaths>
-      <add key="AppPoolRestarter" value="c:/path/path.ps"/>
-      <add key="AppPoolRecycler" value="c:/path/path.ps"/>
-      <add key="EventLogGetter" value="c:/path/path.ps"/>
-      <add key="Other" value="c:/path/path.ps"/>
-    </scriptPaths>
-  </ScriptRunner>
-  <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
-
-
-
-
+  <!--Feature-->
   <appSettings>
-    <!--ATR: Actions configured in this extension-->
-    <add key="[AC]_IISPoolRestar" value="true"/>
-    <add key="[AC]_EventLogGetter" value="true"/>
-    <add key="[AC]_IISLogGetter" value="false"/>
+    <!--Functionality [SCRIPT RUNNER]-->
+      <!--Option-->
+      <add key="[ScriptRunnerFunctionality]_EnableBathExecution" value="false"/>
+      <add key="[ScriptRunnerFunctionality]_EnablePowerShellExecution" value="false"/>
+      <add key="[ScriptRunnerFunctionality]_EnableJarExecution" value="false"/>
+  
 
-    <!--ATR: Communication functions currently configured-->
-    <add key="[COM]_ftp" value="false"/>
-    <add key="[COM]_email" value="true"/>
-    <add key="[COM]_sms" value="false"/>
-    <add key="[COM]_whatsapp" value="false"/>
-
-    <!--ATR: Emails configured-->
-    <add key="[EM]_email@email.com" value="false"/>
-    <add key="[EM]_email2@email.com" value="false"/>
-    <add key="[EM]_email3@email.com" value="false"/>
-    <add key="[EM]_email3@email.com" value="false"/>
-    <add key="[EM]_cco@cencosud.cl" value="true"/>
-    <add key="[EM]_alex.torresruiz@cencosud.cl" value="true"/>
-
-
-
+    <!--Values Parameters-->
+      
+      <add key="[ScriptRunnerValuesParameters]_AppPoolRestarterScriptPath" value="c:/path/path.ps"/>
+      <add key="[ScriptRunnerValuesParameters]_AppPoolRecyclerScriptPath" value="c:/path/path.ps"/>
+      <add key="[ScriptRunnerValuesParameters]_EventSystemLogScripPath" value="c:/path/path.ps"/>
+  
+     <!--Functionality [SCRIPT RUNNER]-->
+  
 
   </appSettings>
 </configuration>
