Done functionality that manipulate application config files

--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/cco.devops.extension.framework.core.windows.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/cco.devops.extension.framework.core.windows.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="ConfigurationSetting\ApplicationSettings\CustomSectionsApplicationReader.cs" />
     <Compile Include="ConfigurationSetting\ApplicationSettings\RuntimeConfigurationReader.cs" />
+    <Compile Include="ConfigurationSetting\ConfigurationHelpers\AppConfigHelpers.cs" />
     <Compile Include="ConfigurationSetting\Runtime\ConfigurationLoader\RuntimeConfigurationLoader.cs" />
     <Compile Include="ConfigurationSetting\Runtime\XmlReader\XmlConfigurationReader.cs" />
     <Compile Include="Contracts\AppSettingKeyValueVo.cs" />
