--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/App.config
@@ -24,16 +24,16 @@
   <appSettings>
     <!--Functionality [SCRIPT RUNNER]-->
       <!--Option-->
-      <add key="[ScriptRunnerFunctionality]_EnableBathExecution" value="false"/>
-      <add key="[ScriptRunnerFunctionality]_EnablePowerShellExecution" value="false"/>
-      <add key="[ScriptRunnerFunctionality]_EnableJarExecution" value="false"/>
+      <add key="ScriptRunnerFunctionality_EnableBathExecution" value="false"/>
+      <add key="ScriptRunnerFunctionality_EnablePowerShellExecution" value="false"/>
+      <add key="ScriptRunnerFunctionality_EnableJarExecution" value="false"/>
   
 
     <!--Values Parameters-->
       
-      <add key="[ScriptRunnerValuesParameters]_AppPoolRestarterScriptPath" value="c:/path/path.ps"/>
-      <add key="[ScriptRunnerValuesParameters]_AppPoolRecyclerScriptPath" value="c:/path/path.ps"/>
-      <add key="[ScriptRunnerValuesParameters]_EventSystemLogScripPath" value="c:/path/path.ps"/>
+      <add key="ScriptRunnerValuesParameters_AppPoolRestarterScriptPath" value="c:/path/path.ps"/>
+      <add key="ScriptRunnerValuesParameters_AppPoolRecyclerScriptPath" value="c:/path/path.ps"/>
+      <add key="ScriptRunnerValuesParameters_EventSystemLogScripPath" value="c:/path/path.ps"/>
   
      <!--Functionality [SCRIPT RUNNER]-->
   
