New DTO for specific feature

--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/App.config
@@ -1,66 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 
-   <!--<runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath=".;.\cco.devops.extension.framework.core.windows\bin"/>
-    </assemblyBinding>
-  </runtime>-->
-  
-  <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
-    <configSections>
-      <sectionGroup name="ScriptRunner">
 
-        <section name="ScriptRunnerFuncionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerFuncionalityVo, cco.devops.extension.transversal.dto" allowLocation="true" allowDefinition="Everywhere"/>
-        <section name="ScriptRunnerPathOrFiles" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathOrFilesVo, cco.devops.extension.transversal.dto" allowLocation="true" allowDefinition="Everywhere"/>
-
-
+  <!--Configuration Groups-->
+  <configSections>
+    <sectionGroup name="ScriptRunner">
+      <section name="ScriptRunnerFunctionality" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunnerVo, 
+               System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+               allowLocation="true" allowDefinition="Everywhere"/>
+      <section name="ScriptRunnerValuesParameters" type="cco.devops.extension.transversal.dto.ValueObject.Settings.ScriptRunner.ScriptRunnerPathVo, 
+               cco.devops.extension.transversal.dto
+               System.Configuration, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+    allowLocation="true" allowDefinition="Everywhere"/>
+    </sectionGroup>
 
 
-      </sectionGroup> 
-    </configSections>
 
-  <ScriptRunner>
-    <functionality>
-      <add key="EnableBathExecution" value="false"/>
-      <add key="EnablePowerShellExecution" value="false"/>
-      <add key="EnableJarExecution" value="false"/>
-    </functionality>
 
-    <scriptPaths>
-      <add key="AppPoolRestarter" value="c:/path/path.ps"/>
-      <add key="AppPoolRecycler" value="c:/path/path.ps"/>
-      <add key="EventLogGetter" value="c:/path/path.ps"/>
-      <add key="Other" value="c:/path/path.ps"/>
-    </scriptPaths>
-  </ScriptRunner>
-  <!--ATR: Define configuration funcionality of Script Runner (Task Runner of PowerShell or Bat Scripts)-->
-    
-    
-    
-  
+
+  </configSections>
+
+  <!--Feature-->
   <appSettings>
-    <!--ATR: Actions configured in this extension-->
-    <add key="[AC]_IISPoolRestar" value="true"/>
-    <add key="[AC]_EventLogGetter" value="true"/>
-    <add key="[AC]_IISLogGetter" value="false"/>
-    
-    <!--ATR: Communication functions currently configured-->
-    <add key="[COM]_ftp" value="false"/>
-    <add key="[COM]_email" value="true"/>
-    <add key="[COM]_sms" value="false"/>
-    <add key="[COM]_whatsapp" value="false"/>
-    
-    <!--ATR: Emails configured-->
-    <add key="[EM]_email@email.com" value="false"/>
-    <add key="[EM]_email2@email.com" value="false"/>
-    <add key="[EM]_email3@email.com" value="false"/>
-    <add key="[EM]_email3@email.com" value="false"/>
-    <add key="[EM]_cco@cencosud.cl" value="true"/>
-    <add key="[EM]_alex.torresruiz@cencosud.cl" value="true"/>
-    
-    
-  
+
+    <!-- *************** [EXTENSION FEATURES] ***************-->
+    <add key="Feature_ScriptRunner" value="true"/>
+    <add key="Feature_IISRestarter" value="false"/>
+    <add key="Feature_IISRecycler" value="false"/>
+    <add key="Feature_EventLogManager" value="false"/>
+    <!-- *************** [EXTENSION FEATURES] ***************-->
+
+
+
+    <!-- *************** [FUNCTIONALITY] ***************-->
+    <!--ScriptRunner Functionality-->
+    <add key="ScriptRunnerFunctionality_EnableBathExecution" value="false"/>
+    <add key="ScriptRunnerFunctionality_EnablePowerShellExecution" value="false"/>
+    <add key="ScriptRunnerFunctionality_EnableJarExecution" value="false"/>
+
+
+    <!--ScriptRunner Values Parameters-->
+
+    <add key="ScriptRunnerValuesParameters_AppPoolRestarterScriptPath" value="c:/path/path.ps"/>
+    <add key="ScriptRunnerValuesParameters_AppPoolRecyclerScriptPath" value="c:/path/path.ps"/>
+    <add key="ScriptRunnerValuesParameters_EventSystemLogScripPath" value="c:/path/path.ps"/>
+    <!-- *************** [FUNCTIONALITY] ***************-->
+
 
   </appSettings>
 </configuration>
