--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/App.config
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/App.config
@@ -22,20 +22,29 @@
 
   <!--Feature-->
   <appSettings>
-    <!--Functionality [SCRIPT RUNNER]-->
-      <!--Option-->
+    
+    <!-- *************** [EXTENSION FEATURES] ***************-->
+    <add key="Feature_ScriptRunner" value="true"/>
+    <add key="Feature_IISRestarter" value="false"/>
+    <add key="Feature_IISRecycler" value="false"/>
+    <add key="Feature_EventLogManager" value="false"/>
+ <!-- *************** [EXTENSION FEATURES] ***************-->
+    
+    
+    
+   <!-- *************** [FUNCTIONALITY] ***************-->
+      <!--ScriptRunner Functionality-->
       <add key="ScriptRunnerFunctionality_EnableBathExecution" value="false"/>
       <add key="ScriptRunnerFunctionality_EnablePowerShellExecution" value="false"/>
       <add key="ScriptRunnerFunctionality_EnableJarExecution" value="false"/>
   
 
-    <!--Values Parameters-->
+    <!--ScriptRunner Values Parameters-->
       
       <add key="ScriptRunnerValuesParameters_AppPoolRestarterScriptPath" value="c:/path/path.ps"/>
       <add key="ScriptRunnerValuesParameters_AppPoolRecyclerScriptPath" value="c:/path/path.ps"/>
       <add key="ScriptRunnerValuesParameters_EventSystemLogScripPath" value="c:/path/path.ps"/>
-  
-     <!--Functionality [SCRIPT RUNNER]-->
+      <!-- *************** [FUNCTIONALITY] ***************-->
   
 
   </appSettings>
