--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ConfigurationSetting\ApplicationConfigReaderTests.cs" />
     <Compile Include="ConfigurationSetting\ApplicationSettings\RuntimeConfigurationReaderTests.cs" />
     <Compile Include="ConfigurationSetting\Runtime\RuntimeConfigurationManagerTests.cs" />
+    <Compile Include="Module\ApplicationSetting\ApplicationSettingReaderTests.cs" />
     <Compile Include="NLogConfiguration\NlogConfigManagerTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
