--- a/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.pattern.tfd/cco.devops.extension.pattern.tfd.csproj
@@ -65,7 +65,9 @@
   <ItemGroup>
     <Compile Include="ConfigurationSetting\ApplicationConfigReaderTests.cs" />
     <Compile Include="ConfigurationSetting\ApplicationSettings\RuntimeConfigurationReaderTests.cs" />
+    <Compile Include="ConfigurationSetting\Runtime\ConfigurationLoader\RuntimeConfigurationLoaderTests.cs" />
     <Compile Include="ConfigurationSetting\Runtime\RuntimeConfigurationManagerTests.cs" />
+    <Compile Include="Configuration\ConfigurationManagerTests.cs" />
     <Compile Include="Module\ApplicationSetting\ApplicationSettingReaderTests.cs" />
     <Compile Include="NLogConfiguration\NlogConfigManagerTests.cs" />
     <Compile Include="UnitTest1.cs" />
