--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.iis/cco.devops.extension.framework.core.iis.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.iis/cco.devops.extension.framework.core.iis.csproj
@@ -57,6 +57,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+    <Folder Include="IISInformation\" />
+    <Folder Include="IISOperations\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
