New log logic, include Console and Nlog logic for register and tracking extension execution

--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Actions\EventLog\EventLogExtractor.cs" />
     <Compile Include="Configuration\ConfigurationManager.cs" />
     <Compile Include="Execution\ExecutionLogic.cs" />
+    <Compile Include="LogTracker\LogAndConsoleTracker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
