Some logger logic added

--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/cco.devops.extension.framework.core.windows.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.core.windows/cco.devops.extension.framework.core.windows.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ConfigurationSetting\ApplicationSettings\CustomSectionsApplicationReader.cs" />
     <Compile Include="ConfigurationSetting\ApplicationSettings\RuntimeConfigurationReader.cs" />
     <Compile Include="ConfigurationSetting\ApplicationSettings\ConfigurationHelpers\AppConfigHelpers.cs" />
+    <Compile Include="ConfigurationSetting\Runtime\ConfigurationLoader\AppSettingReaderContainer.cs" />
     <Compile Include="ConfigurationSetting\Runtime\ConfigurationLoader\RuntimeConfigurationLoader.cs" />
     <Compile Include="ConfigurationSetting\Runtime\Execution\ExecutionInformationReader.cs" />
     <Compile Include="ConfigurationSetting\Runtime\XmlReader\XmlConfigurationReader.cs" />
