--- a/CCO.DotNet.Extensions/cco.devops.extension.framework.iis/cco.devops.extension.framework.core.iis.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.framework.iis/cco.devops.extension.framework.core.iis.csproj
@@ -40,12 +40,15 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IISToolsReadeable.cs" />
+    <Compile Include="IISOperations\IISReaderManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,9 +61,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Contracts\" />
     <Folder Include="IISInformation\" />
-    <Folder Include="IISOperations\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
