--- a/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
+++ b/CCO.DotNet.Extensions/cco.devops.extension.clients.appdyn.actionhelper/cco.devops.extension.clients.appdyn.actionhelper.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net35\Ninject.dll</HintPath>
@@ -62,6 +65,10 @@
       <Project>{B3C5F28E-ED15-4AAF-8F2A-BEC3262AC2EF}</Project>
       <Name>cco.devops.extension.framework.core.windows</Name>
     </ProjectReference>
+    <ProjectReference Include="..\cco.devops.extension.framework.iis\cco.devops.extension.framework.core.iis.csproj">
+      <Project>{074a0cd6-4651-4454-9948-062dd2b0ecf0}</Project>
+      <Name>cco.devops.extension.framework.core.iis</Name>
+    </ProjectReference>
     <ProjectReference Include="..\cco.devops.extension.pattern.ioc\cco.devops.extension.pattern.ioc.csproj">
       <Project>{29e1da6a-26e9-4c69-9d65-af04da56cf03}</Project>
       <Name>cco.devops.extension.pattern.ioc</Name>
@@ -79,6 +86,7 @@
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="app.manifest" />
     <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
